[project]
name = "klbase-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.17"
dependencies = [
    "aiofiles>=24.1.0",
    "asyncpg>=0.30.0",
    "fastapi>=0.116.1",
    "numpy>=2.2.6",
    "openai>=1.95.1",
    "psycopg2-binary>=2.9.10",
    "pymilvus>=2.5.12",
    "pypdf>=5.7.0",
    "python-dotenv>=1.1.1",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.35.0",
]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true
